<resources>
    <string name="app_name">Notification</string>
    <string name="pause_event">暂停</string>
    <string name="play_event">播放事件</string>

    <string name="notify_record">录制</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="save">保存</string>
    <string name="add_tag">打标</string>
    <string name="notify_soft">软件</string>
    <string name="exit">退出</string>

</resources>